almost done all functionalities

--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -101,6 +101,7 @@
   <!-- La div fermante en trop a été supprimée ici -->
 </main> <!-- Fin de .container / <main> -->
 
+
 <div id="departement-chart-container"
      style="display: none;
      position: absolute;
@@ -110,8 +111,14 @@
      box-shadow: 0 0 10px rgba(0,0,0,0.1);
      z-index: 1200;
      width: 13%; ">
-    <canvas id="mini-departement-chart"></canvas>
+            <canvas id="mini-departement-chart"></canvas>
+    <div style="display: flex; justify-content: center">
+          <button class="carousel-arrow mini-carousel-prev" style="transform: scale(0.8)">◀</button> <!-- Flèche gauche -->
+            <div class="mini-chart-dots-container"></div>
+          <button class="carousel-arrow mini-carousel-next" style="transform: scale(0.8)">▶</button> <!-- Flèche droite -->
+      </div>
 </div>
+
 
 
 <div id="footer-placeholder"></div>
