--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -112,7 +112,7 @@
      z-index: 1200;
      width: 13%; ">
             <canvas id="mini-departement-chart"></canvas>
-    <div style="display: flex; justify-content: center">
+    <div style="display: flex; justify-content: center; align-items: center">
           <button class="carousel-arrow mini-carousel-prev" style="transform: scale(0.8)">◀</button> <!-- Flèche gauche -->
             <div class="mini-chart-dots-container"></div>
           <button class="carousel-arrow mini-carousel-next" style="transform: scale(0.8)">▶</button> <!-- Flèche droite -->
