--- a/guide_naturel/templates/apropos.html
+++ b/guide_naturel/templates/apropos.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
-  <title>Le Guide Naturel de la BFC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Découvrez l'équipe et la mission du Guide Naturel de la BFC">
+    <title>A propos - Le Guide Naturel de la BFC</title>
   <link href="../static/css/global.css" rel="stylesheet">
     <link href="../static/css/apropos.css" rel="stylesheet">
 </head>
@@ -12,10 +13,9 @@
 
 <div id="header-placeholder"></div>
 
-<main class="container"> <!-- <main> pour le contenu principal de la page -->
+<main class="container">
 
   <div class="text-container">
-      <!-- Utilisation de balises de titre sémantiques -->
       <h2 class="bfc_subtitle">B O U R G O G N E - F R A N C H E - C O M T É</h2>
       <h1 class="bfc_title">LE GUIDE NATUREL</h1>
   </div>
@@ -23,21 +23,21 @@
         <section class="team-introduction section-padding">
             <h2 class = "h2_apropos">Qui sommes-nous ?</h2>
             <div class="team-members">
-                <!-- Membre 1 -->
+                <!-- Mathis -->
                 <div class="team-member">
-                    <img src="../static/ressources/team/mathis.jpg" alt="Photo de Mathis" class="team-photo">
+                    <img src="../static/ressources/team/mathis.webp" alt="Photo de Mathis" class="team-photo">
                     <h3>Mathis</h3>
                     <p class="member-role">Gestionnaire de la base de données et Back-End</p>
                 </div>
-                <!-- Membre 2 -->
+                <!-- Maeva -->
                 <div class="team-member">
-                    <img src="../static/ressources/team/maeva.jpg" alt="Photo de Maeva" class="team-photo">
+                    <img src="../static/ressources/team/maeva.webp" alt="Photo de Maeva" class="team-photo">
                     <h3>Maeva</h3>
                     <p class="member-role">Gestionnaire du Front-End et Back-End</p>
                 </div>
-                <!-- Membre 3 -->
+                <!-- Jordan -->
                 <div class="team-member">
-                    <img src="../static/ressources/team/jordan.jpg" alt="Photo de Jordan" class="team-photo">
+                    <img src="../static/ressources/team/jordan.webp" alt="Photo de Jordan" class="team-photo">
                     <h3>Jordan</h3>
                     <p class="member-role">Gestionnaire des recherches</p>
                 </div>
@@ -47,8 +47,8 @@
         <section class="project-mission section-padding">
             <h2 class = "h2_apropos">Notre Mission</h2>
             <div class="mission-text">
-                <p>Nous sommes une équipe de <a>trois étudiants dynamiques de l'ESEO Dijon</a>, unis par notre attrait pour la nature. Ce site, dans le cadre de notre projet Big Data, est le fruit de notre travail et de notre désir de partager la richesse de la faune et la flore de notre belle région, la Bourgogne-Franche-Comté.</p>
-                <p>Notre objectif principal était de créer une <a>plateforme ludique et éducative</a>, spécialement conçue pour les enfants et les adolescents. Nous avons voulu rendre l'exploration de la biodiversité locale aussi simple et instructive que possible.</p>
+                <p>Nous sommes une équipe de <b>trois étudiants dynamiques de l'ESEO Dijon</b>, unis par notre attrait pour la nature. Ce site, dans le cadre de notre projet Big Data, est le fruit de notre travail et de notre désir de partager la richesse de la faune et la flore de notre belle région, la Bourgogne-Franche-Comté.</p>
+                <p>Notre objectif principal a été de créer une <b>plateforme ludique et éducative</b>, spécialement conçue pour les enfants et les adolescents. Nous avons voulu rendre l'exploration de la biodiversité locale aussi simple et instructive que possible.</p>
             </div>
         </section>
 
@@ -57,7 +57,6 @@
             <p class = "questions">Si vous avez des questions, des suggestions ou si vous souhaitez simplement en savoir plus sur notre projet, n'hésitez pas à nous contacter. Nous serions ravis d'échanger avec vous !</p>
             <div class="contact-methods">
                 <p>
-                    <!-- Optionnel: Utiliser des icônes Font Awesome ou SVG ici -->
                     Email : <a href="mailto:maeva.ramamonjyramboa@reseau.eseo.fr">equipe.guidebfc@reseau.eseo.fr</a>
                 </p>
 
