--- a/guide_naturel/templates/header.html
+++ b/guide_naturel/templates/header.html
@@ -1,8 +1,8 @@
 <header class="header">
-  <img src="../static/ressources/eseo_logo.png" class="header_logo" alt="Logo ESEO - Le Guide Naturel BFC">
+  <img src="../static/ressources/eseo_logo.webp" class="header_logo" alt="Logo ESEO - Le Guide Naturel BFC">
   <nav class="header_center"> <!-- Utilisation de <nav> pour un groupe de liens de navigation -->
-    <a href="{{ url_for('main_page') }}" class="button_base header_button">ACCUEIL</a>
-    <a href="{{ url_for('search') }}" class="button_base header_button">EXPLORE AVEC ANNA !</a>
-    <a href="{{ url_for('about') }}" class="button_base header_button">A PROPOS DE NOUS !</a>
+    <a href="{{ url_for('guide_naturel') }}" class="button_base header_button">ACCUEIL</a>
+    <a href="{{ url_for('recherche') }}" class="button_base header_button">EXPLORE AVEC ANNA !</a>
+    <a href="{{ url_for('apropos') }}" class="button_base header_button">A PROPOS DE NOUS !</a>
   </nav>
 </header>
