--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -24,7 +24,7 @@
   <div class="content-below">
     <section class="Carte"> <!-- <section> pour une section thématique -->
       <div class="image-container">
-        <img src="../static/ressources/carte_bfc.png" alt="Carte de la région Bourgogne-Franche-Comté avec ses départements cliquables" usemap="#departements_bfc">
+        <img src="../static/ressources/carte_bfc.webp" alt="Carte de la région Bourgogne-Franche-Comté avec ses départements cliquables" usemap="#departements_bfc">
         <!-- Ces images sont prévues pour être mises à jour par JavaScript au survol des départements -->
         <img src="" alt="" class="overlay-image">
         <img src="" alt="" class="overlay-text">
