--- a/guide_naturel/templates/recherche.html
+++ b/guide_naturel/templates/recherche.html
@@ -45,7 +45,7 @@
 
     <div class="chatbot-results">
         <div id="results-search-bar-container" style="margin-bottom: 15px; display: none;"> <!-- Caché initialement -->
-    <input type="text" id="species-search-input" placeholder="Chercher un nom scientifique...">
+    <input type="text" id="species-search-input" placeholder="Cherche un nom scientifique...">
     <button id="species-search-button">Chercher</button>
     <div id="species-suggestions-list" class="suggestions-dropdown" style="display: none;">
         <!-- Les suggestions apparaîtront ici -->
