--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -92,8 +92,8 @@
       <div class="chart-dots-container"></div>
       <div class="buttons_right">
         <!-- Remplacé <button> par <a> pour la navigation -->
-        <a href="" class="button_base button_right1" data-chartkey="especesParStatutConservation">Nombre d'espèces par statut de conservation</a>
         <a href="" class="button_base button_right1" data-chartkey="especesParRegne">Nombre d'espèces par règne</a>
+        <a href="" class="button_base button_right1" data-chartkey="especesParStatutConservation">Nombre d'espèces par statut de conservation</a>
         <a href="" class="button_base button_right1" data-chartkey="statutsConservationParRegne">Statuts de conservation par règne</a>
       </div>
     </aside>
@@ -105,12 +105,11 @@
 <div id="departement-chart-container"
      style="display: none;
      position: absolute;
-     background-color: rgba(129, 252, 184,0.8);
-     border: 1px solid rgba(255, 255, 255,0.5);
+     background-color: rgba(11, 189, 115, 0.7);
+     border: 1px solid rgba(8,126,79,0.8);
      border-radius: 10px;
      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-     z-index: 1200;
-     width: 13%; ">
+     z-index: 1200;">
             <canvas id="mini-departement-chart"></canvas>
     <div style="display: flex; justify-content: center; align-items: center">
           <button class="carousel-arrow mini-carousel-prev" style="transform: scale(0.8)">◀</button> <!-- Flèche gauche -->
