--- a/guide_naturel/static/css/index.css
+++ b/guide_naturel/static/css/index.css
@@ -95,6 +95,10 @@
         max-width: 100%;
         padding: 0 1rem;
     }
+
+    #departement-chart-container{
+        width: 30%;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -134,6 +138,11 @@
         text-align: center;
         border-radius: 10px;
         margin: 5px;
+    }
+
+    #departement-chart-container{
+        width: 50%;
+        max-width: 250px;
     }
 }
 
