final lighthouse changes

--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
+    <meta name="description" content="Regarde la vue globale des espèces présentes en région BFC">
   <title>Le Guide Naturel de la BFC</title>
   <link href="../static/css/global.css" rel="stylesheet">
   <link href="../static/css/index.css" rel="stylesheet">
@@ -90,14 +91,14 @@
           <button class="carousel-arrow carousel-next">▶</button> <!-- Flèche droite -->
       </div>
       <div class="chart-dots-container"></div>
+    </aside>
+  </div> <!-- Fin de .content-below -->
       <div class="buttons_right">
         <!-- Remplacé <button> par <a> pour la navigation -->
         <a href="" class="button_base button_right1" data-chartkey="especesParRegne">Nombre d'espèces par règne</a>
         <a href="" class="button_base button_right1" data-chartkey="especesParStatutConservation">Nombre d'espèces par statut de conservation</a>
         <a href="" class="button_base button_right1" data-chartkey="statutsConservationParRegne">Statuts de conservation par règne</a>
       </div>
-    </aside>
-  </div> <!-- Fin de .content-below -->
   <!-- La div fermante en trop a été supprimée ici -->
 </main> <!-- Fin de .container / <main> -->
 
