--- a/guide_naturel/templates/recherche.html
+++ b/guide_naturel/templates/recherche.html
@@ -31,7 +31,7 @@
             <div class="profile-image-container">
                 <img src="../static/ressources/Anna/Annakinator.webp" alt="Avatar du Chatbot" id="chatbot-avatar">
             </div>
-            <h3 class="chatbot-name">A N N A</h3>
+            <p class="chatbot-name">A N N A</p>
         </div>
 
         <div id="chat-log" class="chat-log-area">
