--- a/guide_naturel/static/css/index.css
+++ b/guide_naturel/static/css/index.css
@@ -54,17 +54,11 @@
 }
 
 .buttons_right {
-  position: fixed;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 0.5rem;
   z-index: 1000;
   padding: 0.5rem 0 0.5rem 0.5rem;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
 }
 
 .button_right1 {
@@ -73,19 +67,13 @@
   background-color: rgba(11, 189, 115, 0.6);
   color: white;
   border: 2px solid rgba(11, 189, 115, 0.5);
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
   width: auto;
   min-width: 170px;
-  text-align: left;
-  padding-left: 15px;
 }
 
 .button_right1:hover, .button_right1:focus, .button_right1.button_active {
-  border-color: #19b09e;
-  background-color: #19b09e;
+  border-color: rgb(9, 101, 74);
+  background-color: rgb(10, 115, 83);
 }
 
 /* RESPONSIVE POUR CARTE ET CONTENU DROITE */
