--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -106,8 +106,8 @@
 <div id="departement-chart-container"
      style="display: none;
      position: absolute;
-     background-color: rgba(11, 189, 115, 0.7);
-     border: 1px solid rgba(8,126,79,0.8);
+     background-color: rgba(11, 189, 115, 0.9);
+     border: 1px solid rgb(37,194,128);
      border-radius: 10px;
      box-shadow: 0 0 10px rgba(0,0,0,0.1);
      z-index: 1200;">
