--- a/guide_naturel/templates/header.html
+++ b/guide_naturel/templates/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <img src="../static/ressources/eseo_logo.webp" class="header_logo" alt="Logo ESEO - Le Guide Naturel BFC">
-  <nav class="header_center"> <!-- Utilisation de <nav> pour un groupe de liens de navigation -->
+  <nav class="header_center">
     <a href="{{ url_for('guide_naturel') }}" class="button_base header_button">ACCUEIL</a>
     <a href="{{ url_for('recherche') }}" class="button_base header_button">EXPLORE AVEC ANNA !</a>
     <a href="{{ url_for('apropos') }}" class="button_base header_button">A PROPOS DE NOUS !</a>
