--- a/guide_naturel/templates/recherche.html
+++ b/guide_naturel/templates/recherche.html
@@ -25,6 +25,7 @@
 
   <div class="content-below-recherche">
 
+    <!-- Partie du Chatbot -->
     <div class="chatbot-container">
 
         <div class="chatbot-profile-header">
@@ -36,26 +37,26 @@
 
         <div id="chat-log" class="chat-log-area">
         </div>
-<div class="chat-input-area">
+    <div class="chat-input-area">
     <input type="text" id="chat-input" placeholder="Écris ta réponse ici..." disabled>
     <button id="send-chat-button" disabled>Envoyer</button>
     <button id="skip-chat-button" disabled>Je ne sais pas</button>
 </div>
     </div>
 
+    <!-- Partie des résultats du Chatbot -->
     <div class="chatbot-results">
         <div id="results-search-bar-container" style="margin-bottom: 15px; display: none;"> <!-- Caché initialement -->
     <input type="text" id="species-search-input" placeholder="Cherche un nom scientifique...">
     <button id="species-search-button">Chercher</button>
     <div id="species-suggestions-list" class="suggestions-dropdown" style="display: none;">
-        <!-- Les suggestions apparaîtront ici -->
     </div>
 </div>
 
         <div id="final-chatbot-results-content">
         </div>
 
-        <img src="../static/ressources/Anna/anna.webp" alt="Personnage assistant" id="results-character">
+        <img src="../static/ressources/Anna/anna.webp" alt="Anna l'exploratrice" id="results-character">
     </div>
     </div>
 
