--- a/guide_naturel/static/css/carousel.css
+++ b/guide_naturel/static/css/carousel.css
@@ -1,39 +1,39 @@
 .chart-carousel-container {
     position: relative; /* Pour positionner les flèches */
-    width: 100%; /* S'adapte au conteneur parent */
-    display: flex; /* Utilisation de flexbox pour aligner le canvas et les flèches */
+    width: 100%;
+    display: flex; /* aligner le canvas et les flèches */
     align-items: center; /* Centrer verticalement les éléments */
     justify-content: center; /* Centrer horizontalement les éléments */
     z-index: 100; /* S'assure que les flèches sont au-dessus du canvas */
 }
 
 .carousel-arrow {
-    background-color: rgba(10, 115, 83, 0.7); /* Vert foncé, semi-transparent */
+    background-color: rgba(10, 115, 83, 0.7);
     color: #ffffff;
     border: none;
     padding: 8px 12px;
     cursor: pointer;
     font-size: 1.5em; /* Taille de la flèche */
-    z-index: 100; /* S'assure que les flèches sont au-dessus du canvas */
+    z-index: 100;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    margin: 0 5px; /* Petit espace entre les flèches et le canvas */
+    margin: 0 5px;
 }
 
 .carousel-arrow:hover {
-    background-color: rgba(10, 115, 83, 1); /* Opaque au survol */
+    background-color: rgba(10, 115, 83, 1);
 }
 
 .chart-dots-container {
-    text-align: center; /* Centre les points */
-    display: none; /* Caché par défaut, géré par JS */
+    text-align: center;
+    display: none;
 }
 
 .chart-dot, .mini-chart-dot{
     display: inline-block; /* Pour qu'ils soient sur la même ligne */
     width: 10px;
     height: 10px;
-    background-color: rgba(255, 255, 255, 0.4); /* Couleur des points inactifs (blanc transparent) */
+    background-color: rgba(255, 255, 255, 0.4);
     border-radius: 50%; /* Forme circulaire */
     margin: 0 5px; /* Espace entre les points */
     cursor: pointer;
@@ -41,10 +41,10 @@
 }
 
 .chart-dot.active, .mini-chart-dot.active{
-    background-color: #0a7353; /* Couleur du point actif (votre vert principal) */
-    transform: scale(1.2); /* Grossit légèrement le point actif */
+    background-color: #0a7353;
+    transform: scale(1.2);
 }
 
 .chart-dot:hover, .mini-chart-dot:hover {
-    background-color: rgba(255, 255, 255, 0.8); /* Changement de couleur au survol */
+    background-color: rgba(255, 255, 255, 0.8);
 }
